--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,13 @@
 
   <!-- Styles -->
   	<link rel="stylesheet" href="http://www.jqwidgets.com/public/jqwidgets/styles/jqx.base.css" type="text/css" />
+  	<link rel="stylesheet" href="http://www.jqwidgets.com/public/jqwidgets/styles/jqx.bootstrap.css" type="text/css" />
           <!-- jQWidgets -->
   	<script src="http://www.jqwidgets.com/public/jqwidgets/jqxcore.js"></script>
   	<script src="http://www.jqwidgets.com/public/jqwidgets/jqxdraw.js"></script>
-  	<script src="http://www.jqwidgets.com/public/jqwidgets/jqxnavigationbar.js"></script>
+  	<script src="http://www.jqwidgets.com/public/jqwidgets/jqxbargauge.js"></script>
+  	<script src="http://www.jqwidgets.com/public/jqwidgets/jqxnumberinput.js"></script>
+
 
 </head>
 
